yamls/limits.yml
apiVersion: v1
kind: Namespace
metadata:
  name: limitspace
