yamls/quotas.yml
apiVersion: v1
kind: Namespace
metadata:
  name: quotas-k8s
