yamls/pod_limit_test.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-tests
  namespace: limitspace
spec:
  containers:
  - name: testes-limits
    image: alpine
    resources:
      requests:
        cpu: 200m
    tty: true
    stdin: true
