yamls/pod_serviceaccount.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-sa
spec:
  serviceAccountName: mr-robot
  containers:
  - name: apache
    image: httpd:alpine
    ports:
    - containerPort: 80
